--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,20 @@ name = "aoc24"
 version = "0.1.0"
 edition = "2021"
 
+[[bench]]
+name = "aoc24"
+harness = false
+
+[profile.bench]
+opt-level = 3
+lto = true
+
 [profile.release]
 opt-level = 3
 lto = true
 
 [dependencies]
 rayon = "1.10.0"
+
+[dev-dependencies]
+criterion = "0.5.1"
